roles/minio-server/files/minio-host-access-ingress.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: minio
---
apiVersion: v1
kind: Service
metadata:
  name: minio-server
  namespace: minio
spec:
  type: ExternalName
  # MicroK8s 'host-access' add-on interface, lo:microk8s
  externalName: host.local
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/proxy-body-size: 1g
  name: minio-server
  namespace: minio
spec:
  tls:
    - hosts:
        - minio.owntube.tv
      secretName: minio-server-secret
  rules:
    - host: minio.owntube.tv
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-server
                port:
                  number: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: minio-console
  namespace: minio
spec:
  type: ExternalName
  # MicroK8s 'host-access' add-on interface, lo:microk8s
  externalName: host.local
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/proxy-body-size: 1g
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: minio-console
  namespace: minio
spec:
  tls:
    - hosts:
        - minio.owntube.tv
      secretName: minio-console-secret
  rules:
    - host: minio.owntube.tv
      http:
        paths:
          - path: /console(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: minio-console
                port:
                  number: 9001
